# C23_ToysCollection

./: .clangd
Delegates/: Delegate.h
ThreadPool dll/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
